variables not defined

--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@ var icon = {
 	//get the data from the store to plot
 	$.getJSON(storageLocation, function(data) {
 		$.each(data, function(i, d) {
+            var lat =d.lat;
+			var lng = d.lng;
 			if (lng < lngWest || lng > lngEast) {
 				return true
 			} else if (lat < latWest || lat > latEast) {
 				return true	
 			}
-            lat =d.lat;
-			lng = d.lng;
 			if ( lng < lngWest + third ) {
 				icon.fillColor = redColor
 			} else if ( lng > lngWest + third && lng < lngWest + 2*third ) {
