--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         height: 100%;
       }
     </style>
-    
+    <link rel="shortcut icon" href="france.ico" />
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="sweetalert.min.js"></script> 
