--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ var icon = {
 			} else if ( lng > lngWest + third && lng < lngWest + 2*third ) {
 				icon.fillColor = whiteColor
 			} else {
-				icon.fillColor = redColour
+				icon.fillColor = redColor
 			}
 			var marker = new google.maps.Marker({
 	        // Set the position of the marker
