--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="sweetalert.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="sweetalert.css">
+    <title>France and Lebanon</title>
   </head>
   <body>
     <div id="map"></div>
@@ -27,9 +28,9 @@
 var snazzyMap = [{"featureType":"all","elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#000000"},{"lightness":40}]},{"featureType":"all","elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#000000"},{"lightness":16}]},{"featureType":"all","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":17},{"weight":1.2}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":21}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":16}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":19}]},{"featureType":"water","elementType":"geometry","stylers":[{"color":"#0f252e"},{"lightness":17}]}];
 function getLocation() {
 	swal({   
-		title: "Thinking of France",   
-		text: "This app is to show the people of France that we are thinking of them. Share your location to help show them",   
-		imageUrl: 'france.png',   
+		title: "Thinking of Lebanon and France",   
+		text: "This app is to show the people of France and Lebanon that we are thinking of them. Share your location to help show them",   
+		imageUrl: 'franceLebanon.png',   
 		showCancelButton: true,
 		closeOnConfirm: false, 
 		closeOnCancel: false, 
@@ -115,13 +116,13 @@ var icon = {
 			} else if (lat < latWest || lat > latEast) {
 				return true	
 			}
-			if ( lng < lngWest + third ) {
-				icon.fillColor = blueColor
-			} else if ( lng > lngWest + third && lng < lngWest + 2*third ) {
-				icon.fillColor = whiteColor
-			} else {
-				icon.fillColor = redColor
-			}
+			// if ( lng < lngWest + third ) {
+				icon.fillColor = whiteColor;
+			// } else if ( lng > lngWest + third && lng < lngWest + 2*third ) {
+			// 	icon.fillColor = whiteColor
+			// } else {
+			// 	icon.fillColor = redColor
+			// }
 			var marker = new google.maps.Marker({
 	        // Set the position of the marker
 	        position: new google.maps.LatLng(lat, lng),
