--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
   	google.maps.event.addDomListener(window, 'load', getLocation);  
   })
 var snazzyMap = [{"featureType":"all","elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#000000"},{"lightness":40}]},{"featureType":"all","elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#000000"},{"lightness":16}]},{"featureType":"all","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":17},{"weight":1.2}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":21}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":16}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":19}]},{"featureType":"water","elementType":"geometry","stylers":[{"color":"#0f252e"},{"lightness":17}]}];
+var message = '';
 function getLocation() {
 	swal({   
-		title: "Thinking of Lebanon and France",   
-		text: "This app is to show the people of France and Lebanon that we are thinking of them. Share your location to help show them",   
-		imageUrl: 'franceLebanon.png',   
+		title: "Thinking of Lebanon, France, Kenya",   
+		text: "This app is to show the people of Kenya, France and Lebanon that we are thinking of them. Share your location to help show them",   
+		imageUrl: 'blend.jpeg',   
 		showCancelButton: true,
 		closeOnConfirm: false, 
 		closeOnCancel: false, 
@@ -38,16 +39,21 @@ function getLocation() {
 		}, function(isConfirm){   
 			if (isConfirm) {     
 				swal({   
-					title: 'Thanks! We are just populating the map',   
-					text: 'Come back later and see how we are doing!',   
-					timer: 8000 });
-			    if (navigator.geolocation) {
-			        navigator.geolocation.getCurrentPosition(initMap);
-			    } else {
-			        swal("Error", "For some reason we can't get your location, sorry", "error");
-			    }
+					title: 'Thanks! We are just populating the map.',   
+					html: 'Come back later and see how we are doing! Leave a comment if you like<p><input id="input-field">'
+				}, function() {
+					message = $('#input-field').val();
+					if (navigator.geolocation) {
+				        navigator.geolocation.getCurrentPosition(initMap);
+				    } else {
+				        swal("Error", "For some reason we can't get your location, sorry", "error");
+				        initMap(null);
+				    }
+				});
+			    
 			} else {     
-				swal("Cancelled", "We need your location so thanks anyway", "error");
+				swal("Cancelled", "You can view the map, but your thoughts will not be shared", "error");
+				initMap(null);
 			}
 	});
 }
@@ -56,15 +62,17 @@ function getLocation() {
 var storageLocation = "https://api.decoded.com/store/thinkingoffrance";
 
 function initMap(position) {
-
-	// center: {lat: -33.9, lng: 151.2}
-	var latLng = {lat: position.coords.latitude, lng: position.coords.longitude};
-  	$.get(storageLocation+"?lat="+latLng.lat+"&lng="+latLng.lng, function() {
-  		console.log("stored")
-  	})
+	if (position != null) {
+		// center: {lat: -33.9, lng: 151.2}
+		var latLng = {lat: position.coords.latitude, lng: position.coords.longitude};
+	  	$.get(storageLocation+"?lat="+latLng.lat+"&lng="+latLng.lng+"&msg="+message, function() {
+	  		console.log("stored")
+	  	})
+	}
+	
   var map = new google.maps.Map(document.getElementById('map'), {
     zoom: 3,
-    center: latLng,
+    center: {lat: 48.864716, lng: 2.349014 },
     styles : snazzyMap
   });
 
@@ -106,11 +114,13 @@ var icon = {
 	var lngWest = map.getBounds().getSouthWest().lng();
 	var width = lngEast - lngWest;
 	var third = width / 3;
+	
 	//get the data from the store to plot
 	$.getJSON(storageLocation, function(data) {
 		$.each(data, function(i, d) {
             var lat =d.lat;
 			var lng = d.lng;
+			console.log("message: ", d.msg); 
 			// if (lng < lngWest || lng > lngEast) {
 			// 	return true
 			// } else if (lat < latWest || lat > latEast) {
@@ -123,6 +133,9 @@ var icon = {
 			// } else {
 			// 	icon.fillColor = redColor
 			// }
+			var infowindow = new google.maps.InfoWindow({
+				content: (d.msg === undefined ? '' : d.msg)
+			});
 			var marker = new google.maps.Marker({
 	        // Set the position of the marker
 	        position: new google.maps.LatLng(lat, lng),
@@ -130,6 +143,14 @@ var icon = {
 	        map: map,
 	        icon: icon
 	      });
+			
+			google.maps.event.addListener(marker, 'click', function() {
+		   		infowindow.open(map,marker);
+			});				
+			
+			if (d.msg != undefined) {
+				infowindow.open(map,marker);
+			}
 			markers.push(marker)
         });
 	});
