--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="sweetalert.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="sweetalert.css">
-    <title>France and Lebanon</title>
+    <title>France, Lebanon, Kenya</title>
   </head>
   <body>
     <div id="map"></div>
