--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="sweetalert.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="sweetalert.css">
+    <link rel="stylesheet" type="text/css" href="banner.css">
     <title>France, Lebanon, Kenya</title>
   </head>
   <body>
+  	<div class="golog-find-ribbon-wrapper left">
+        <div class="golog-find-ribbon">
+            <a href="https://golog.co/blog/article/Thoughts_About_Terrorism">Find me on Golog!</a>
+        </div>
+    </div>
     <div id="map"></div>
   </body>
+
   <script type="text/javascript">
   $(document).ready(function() {
   	google.maps.event.addDomListener(window, 'load', getLocation);  
