moving banner to right

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>France, Lebanon, Kenya</title>
   </head>
   <body>
-  	<div class="golog-find-ribbon-wrapper left">
+  	<div class="golog-find-ribbon-wrapper right">
         <div class="golog-find-ribbon">
             <a href="https://golog.co/blog/article/Thoughts_About_Terrorism">Find me on Golog!</a>
         </div>
